<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">task_1_compose</string>
    <string name="comments">Комментарии:</string>
    <string name="show_more">Показать больше</string>
    <string name="show_less">Скрыть</string>
    <string name="photos">Photos</string>
    <string name="posts">Posts</string>
    <string name="todos">Todos</string>
    <string name="users">Users</string>
    <string name="plus">+</string>
    <string name="address">Адрес:</string>
    <string name="number">Номер:</string>
    <string name="load_more">Загрузить ещё:</string>
    <string name="loading_error">Loading Error, try again</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="deeplink_host">task_compose.com</string>

    <!--content Description -->
    <string name="done_icon">Done</string>
    <string name="like_icon">Like icon</string>
    <string name="filled_like_icon">Filled like icon</string>
    <string name="update_icon">Update</string>
    <string name="photo">Photo</string>
    <string name="arrow_back_icon">Arrow back icon</string>
    <string name="time_picker_icon">Time picker icon</string>
</resources>