package com.example.domain.resources

object TestTags {
    const val TODO_CARD_TEST_TAG = "TODO_CARD"
    const val TODO_CARD_TEXT_FIELD_TEST_TAG = "TODO_CARD_TEXT_FIELD"
    const val TODO_LAZY_COLUMN_TEST_TAG = "TODO_LAZY_COLUMN"
    const val REMOVE_FOCUS_CONTAINER_TEST_TAG = "REMOVE_FOCUS_CONTAINER"
    const val LOADING_INDICATOR_TEST_TAG = "LOADING_INDICATOR"
    const val POST_CARD_TEST_TAG = "POST_CARD"
    const val LOAD_MORE_LIST_TEST_TAG = "LOAD_MORE_LIST"
    const val COMMENT_CARD_TEST_TAG = "COMMENT_CARD"
    const val COMMENTS_SECTION_TEST_TAG = "COMMENTS_SECTION"
    const val IMAGE_PAGER_TEST_TAG = "IMAGE_PAGER"
}